2004-03-21  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
        * pt_BR.po: Updated Brazilian Portuguese translation done by Joao
        S. O. Bueno <gwidion@mpc.com.br>.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12783 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by Joao
+	S. O. Bueno <gwidion@mpc.com.br>.
+
 2004-03-21  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation.
