--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated Norwegian (Bokmål) translation.
+
 2004-03-17  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: updated translation, by
