--- a/tips/no.po
+++ b/tips/no.po
@@ -4,11 +4,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gimp\n"
+"Project-Id-Version: GNU gimp 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 22:57+0100\n"
-"PO-Revision-Date: 2003-08-25 10:59+0200\n"
-"Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
+"PO-Revision-Date: 2004-03-22 11:55+0100\n"
+"Last-Translator: Sigurd Gartmann <sigurd-translate@brogar.org>\n"
 "Language-Team: Norwegian <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,21 +40,24 @@ msgid ""
 "<tt>Ctrl</tt>-click with the Bucket Fill tool to have it use the background "
 "color instead of the foreground color."
 msgstr ""
+"<tt>Ctrl</tt>-klikk med malingspannverktøyet for å få det til å bruke "
+"bakgrunnsfargen i stedet for forgrunnsfargen."
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
 "degree angles."
 msgstr ""
-"<tt>Ctrl</tt>-dra med Transformer-verktøyet i rotasjonsmodus for å begrense "
-"rotasjonen til 15 graders vinkler."
+"<tt>Ctrl</tt>-dra med Rotasjonsverktøyet begrenser rotasjonen til 15-graders "
+"vinkler."
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
 "<tt>Shift</tt>-click on the eye icon in the Layers dialog to hide all layers "
 "but that one. <tt>Shift</tt>-click again to show all layers."
 msgstr ""
+"<tt>Shift</tt>-klikk på øyeikonet i Lagdialogen for å gjemme alle lag untatt "
+"det du klikker på. <tt>Shift</tt>-klikk igjen for å se alle lag."
 
 #: tips/gimp-tips.xml.in.h:7
 msgid ""
@@ -63,6 +66,10 @@ msgid ""
 "or \"Anchor Layer buttons\" in the Layers dialog, or use the menus to do the "
 "same."
 msgstr ""
+"Et flytende utvalg må bli forankret til et nytt lag eller til det forrige "
+"aktive laget før det kan gjøres andre operasjoner på bildet. Klikk på «Nytt "
+"Lag»- eller «Forankre Lag»-knappene i Lagdialogen, eller bruk menyene til å "
+"gjøre det samme."
 
 #: tips/gimp-tips.xml.in.h:8
 msgid ""
@@ -71,6 +78,11 @@ msgid ""
 "menu item, and pressing the desired key combination. If \"Save Keyboard "
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
+"Etter at du aktiverte «Dynamiske tastesnarveier» i Alternativerdialogen, kan "
+"du opprette hurtigtaster. Dette gjør du ved å få fram menyen, velge en ting "
+"fra menyen, og trykke den ønskede tastekombinasjonen. Hvis «Lagre "
+"tastesnarveier» er aktivert, blir de nye innstillingene lagret når du "
+"avslutter GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -78,6 +90,9 @@ msgid ""
 "selections will snap to the guides. You can remove guides by dragging them "
 "off the image with the Move tool."
 msgstr ""
+"Klikk og dra en linjal for å plassere en guide på et bilde. Alle utvalg som "
+"er dratt, vil tilpasses guidene. Du kan fjerne guider ved å dra dem av "
+"bildet med flytteverktøyet."
 
 #: tips/gimp-tips.xml.in.h:10
 msgid ""
@@ -86,6 +101,10 @@ msgid ""
 "&gt;Colors-&gt;Levels). If there are any color casts, you can correct them "
 "with the Curves tool (Layer-&gt;Colors-&gt;Curves)."
 msgstr ""
+"Hvis noen av dine skannede fotografier ikke har nok farge, kan du enkelt "
+"forbedre fargespekteret med «Auto»-knappen i Nivåverktøytet (Lag-&gt;Farger-"
+"&gt;Nivå). Hvis det er noen ujevnheter kan du rette dem med kurveverktøytet "
+"(Lag-&gt:Farger-&gt;Kurver)."
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
@@ -99,6 +118,8 @@ msgid ""
 "If your screen is too cluttered, you can press <tt>Tab</tt> multiple times "
 "in an image window to hide or show the toolbox and other dialogs."
 msgstr ""
+"Hvis skjermen din er veldig rotete, kan du trykke <tt>Tab</tt> flere ganger "
+"i et bildevindu for å kjule eller vise verktøykassen og andre dialoger."
 
 #: tips/gimp-tips.xml.in.h:13
 msgid ""
@@ -106,12 +127,17 @@ msgid ""
 "you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
+"De fleste tilleggene jobber mot det gjeldende laget på det gjeldende bildet. "
+"I noen tilfeller vil du være nødt til å flette alle lag (Bilde-&gt;Flat ut "
+"bilde) hvis du vil at tillegget skal virke på hele bildet."
 
 #: tips/gimp-tips.xml.in.h:14
 msgid ""
 "Nearly all image operations are performed by right-clicking on the image. "
 "And don't worry, you can undo most mistakes..."
 msgstr ""
+"Nesten alle bildeoperasjoner blir gjort med å høyreklikke på bildet. Og ta "
+"det med ro, du kan angre flesteparten av feilene du gjør."
 
 #: tips/gimp-tips.xml.in.h:15
 msgid ""
@@ -120,6 +146,10 @@ msgid ""
 "&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
 "Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
+"Ikke alle effekter kan gjøre på alle typer bilder. Dette vises med et "
+"utgrået menyinnslag. Du kan trenge å endre bildet til RGB (Bilde-&gt;Modus-"
+"&gt;RGB), legge til en alfakanal (Lag-&gt;Gjennomsiktighet-&gt;Legg til "
+"alfakanal) eller flate det ut (Bilde-&gt;Flat ut bilde)."
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -127,6 +157,9 @@ msgid ""
 "you to add to the current selection instead of replacing it. Using <tt>Ctrl</"
 "tt> before making a selection subtracts from the current one."
 msgstr ""
+"Trykk og hold <tt>Shift</tt>-knappen før du lager et utvalg, så får du legge "
+"til utvalget i stedet for å erstatte det. Bruk av <tt>Ctrl</tt> før du lager "
+"et utvalg lar det trekke fra det gjeldende utvalget."
 
 #: tips/gimp-tips.xml.in.h:17
 msgid ""
@@ -134,6 +167,9 @@ msgid ""
 "<tt>.bz2</tt>, if you have bzip2 installed) to the filename and your image "
 "will be saved compressed. Of course loading compressed images works too."
 msgstr ""
+"GIMP støtter gzip-kompresjon i farta. Bare legg til <tt>.gz</tt> (eller <tt>."
+"bz2</tt>, hvis du har bzip2 installert) til filnavnet, og bildet du lagrer "
+"vil bli komprimert. Selvfølgelig støttes også åpning av komprimerte bilder."
 
 #: tips/gimp-tips.xml.in.h:18
 msgid ""
@@ -141,6 +177,8 @@ msgid ""
 "stack of slides or filters, such that looking through them you see a "
 "composite of their contents."
 msgstr ""
+"GIMP bruker lag for å la deg organisere bildet. Tenk på dem som en stabel av "
+"lysark eller filtre, slik at du ved å se gjennom dem set et sammensatt bilde."
 
 #: tips/gimp-tips.xml.in.h:19
 msgid ""
@@ -148,6 +186,9 @@ msgid ""
 "just like the shell. Type part of a filename, hit <tt>Tab</tt>, and voila, "
 "it's completed."
 msgstr ""
+"Filvalgvinduet har kommandolinjefullføring med <tt>Tab</tt>, akkurat som "
+"skallet. Skriv starten på filnavnet, og trykk <tt>Tab</tt>, så blir "
+"filnavnet fullført."
 
 #: tips/gimp-tips.xml.in.h:20
 msgid ""
@@ -156,6 +197,10 @@ msgid ""
 "stack. You may add transparency to it by right-clicking in the Layers dialog "
 "and selecting \"Add Alpha Channel\"."
 msgstr ""
+"Laget som heter «Bakgrunn» er spesielt fordi det ikke har gjennomsiktighet. "
+"Dette hindrer deg i å legge til en lagmaske eller flytte laget opp i "
+"stabelen. Du kan legge til gjennomsiktiget veed å høyreklikke i Lagdialogen "
+"og velge «Legg til alfrakanal»."
 
 #: tips/gimp-tips.xml.in.h:21
 msgid ""
@@ -165,6 +210,10 @@ msgid ""
 "intersection of the guides, and the resulting selection will just touch the "
 "guides."
 msgstr ""
+"For å lage en perfekt sirkel, hold <tt>Shift</tt> inne mens du gjør et "
+"ellipseutvalg. For å plassere sirkelen presist, dra horisontale og vertikale "
+"guider så de tangerer sirkelen du vil velge, plasser markøren i krysset "
+"mellom guidene, og det resulterende utvalget vil akkurat treffe guidene."
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
@@ -173,6 +222,11 @@ msgid ""
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
 "constrained to 15 degree angles."
 msgstr ""
+"Ved bruk av et tegneverktøy (malepensel, spraymaling eller blyant), vil "
+"<tt>Shift</tt>-\"\n"
+"\"klikk tegne en rett linje fra ditt siste tegnepunkt til markørens "
+"posisjon. Hvis du også trykker <tt>Ctrl</tt>, vil linja bli begrenset til 15-"
+"graders vinkler."
 
 #: tips/gimp-tips.xml.in.h:23
 msgid ""
@@ -181,6 +235,10 @@ msgid ""
 "the layers and every aspect of your work-in-progress. Once a project is "
 "completed, you can save it as JPEG, PNG, GIF, ..."
 msgstr ""
+"Når du lagrer et bilde for å jobbe på det seinere, prøv å bruke XCF, GIMPs "
+"eget filformat (bruk filendelsen <tt>.xcf</tt>). Dette gjør at lagene og "
+"hvert aspekt av ditt midlertidige arbeid beholdes. Så snart et prosjekt er "
+"ferdig, kan du lagre det som JPEG, PNG, GIF, ..."
 
 #: tips/gimp-tips.xml.in.h:24
 msgid ""
@@ -188,12 +246,17 @@ msgid ""
 "makes the window move, your window manager uses the <tt>Alt</tt> key "
 "already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"Du kan justere og endre posisjon for et utvalg ved å bruke <tt>Alt</tt>-dra. "
+"Hvis dette gjør at vinduet flyttes, bruker vindushåndtereren din <tt>Alt</"
+"tt>-knappen allerede. Prøv da å holde <tt>Shift</tt> nede samtidig."
 
 #: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
 msgstr ""
+"Du kan justere utvalgsintervallet for uklart utvalg ved å klikke og dra til "
+"høyre og venstre."
 
 #: tips/gimp-tips.xml.in.h:26
 msgid ""
@@ -201,12 +264,17 @@ msgid ""
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
+"Du kan opprette og redigerer komplekse utvalg ved å bruke Baneverktøyet. "
+"Banedialogen lar deg arbeide på flere baner samtidig og konvertere dem til "
+"utvalg."
 
 #: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
+"Du kan dra et lag fra Lagdialogen og slippe det i verktøykassen. Det vil "
+"opprette et nytt bilde som bare består av det ene laget."
 
 #: tips/gimp-tips.xml.in.h:28
 msgid ""
@@ -214,6 +282,9 @@ msgid ""
 "from the toolbox or from a color palette and dropping it into an image will "
 "fill the current image or selection with that color."
 msgstr ""
+"Du kan dra og slippe mange ting i GIMP. For eksempel: Det å dra en farge fra "
+"verktøykassen eller fra en fargepalett, og slippe det i et bilde, vil fylle "
+"bildet eller utvalget med den valgte fargen."
 
 #: tips/gimp-tips.xml.in.h:29
 msgid ""
@@ -221,18 +292,25 @@ msgid ""
 "strokes the edge of your current selection. More complex shapes can be drawn "
 "using the Path tool or with Filters-&gt;Render-&gt;Gfig."
 msgstr ""
+"Du kan tegne enkle firkanter eller sirkler med Edit-&gt;Strøkutvalg. Det vil "
+"tegne kantene på utvalget ditt. Mer komplekse former kan også bli tegnet ved "
+"å bruke Baneverktøyet eller med Filter-&gt;Render-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
 "You can get context-sensitive help for most of the GIMP's features by "
 "pressing the F1 key at any time. This also works inside the menus."
 msgstr ""
+"Du kan få hjelp for de fleste av GIMPs muligheter ved å trykke F1. Dette "
+"virker også inni menyer."
 
 #: tips/gimp-tips.xml.in.h:31
 msgid ""
 "You can perform many layer operations by right-clicking on the text label of "
 "a layer in the Layers dialog."
 msgstr ""
+"Du kan gjøre mange lagoperasjoner ved å høyreklikke på merkelappen til et "
+"lag i Lagdialogen."
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -240,6 +318,9 @@ msgid ""
 "are making a selection in order to constrain it to a perfect square or "
 "circle, or to have it centered on its starting point."
 msgstr ""
+"Du kan trykke eller slippe <tt>Shift</tt>- and <tt>Ctrl</tt>-knappene mens "
+"du gjør et utvalg for å begrense det til et kvadrat eller sirkel, eller for "
+"å ha det sentrert på startpunktet. "
 
 #: tips/gimp-tips.xml.in.h:33
 msgid ""
@@ -248,18 +329,26 @@ msgid ""
 "dialog, you can toggle the visibility of this new channel or convert it to a "
 "selection."
 msgstr ""
+"Du kan lagre et utvalg til en kanal (Velg-&gt;Lagre til kanal) og så endre "
+"kanalen med tegneverktøy. Ved å bruke knappene i Kanaldialogen, kan du slå "
+"av og på synligheten til denne nye kanalen eller konvertere den til et "
+"utvalg."
 
 #: tips/gimp-tips.xml.in.h:34
 msgid ""
 "You can use <tt>Alt</tt>-<tt>Tab</tt> to cycle through all layers in an "
 "image (if your window manager doesn't trap those keys...)."
 msgstr ""
+"Du kan bruke <tt>Alt</tt>-<tt>Tab</tt> for å bytte mellom lagene i et bilde "
+"(hvis ikke vindushåndtereren allerede bruker denne tastekombinasjonen)."
 
 #: tips/gimp-tips.xml.in.h:35
 msgid ""
 "You can use the middle mouse button to pan around the image, if it's larger "
 "than its display window."
 msgstr ""
+"Du kan bruke midterste musknapp for å bevege deg rundt i bildet, dersom det "
+"er større enn vinduet det vises i."
 
 #: tips/gimp-tips.xml.in.h:36
 msgid ""
@@ -268,3 +357,7 @@ msgid ""
 "by painting in the image and click on the button again to convert it back to "
 "a normal selection."
 msgstr ""
+"Du kan bruke tegneverktøy til å endre utvalget. Klikk på «Hurtigmaske»-"
+"knappen nederst til venstre i et bildevindu. Gjør endringer på utvalget ved "
+"å tegne i bildet, og klikk på knappen igjen for å gjøre det til et normalt "
+"utvalg igjen."
