2004-03-22  Sven Neumann  <sven@gimp.org>
	* app/text/gimptextlayer.c (gimp_text_layer_duplicate): put some
	code back in that I removed accidentally.
	(gimp_text_layer_render) freeze/thaw notifications to avoid that
	two "notify::modified" signals are emitted.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12787 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
+	* app/text/gimptextlayer.c (gimp_text_layer_duplicate): put some
+	code back in that I removed accidentally.
+	(gimp_text_layer_render) freeze/thaw notifications to avoid that
+	two "notify::modified" signals are emitted.
+
 2004-03-22  Raphaël Quinet  <quinet@gamers.org>
 
 	* autogen.sh: Added a test for the version of intltool because
