2004-03-22  Sven Neumann  <sven@gimp.org>
	* libgimpbase/gimpparasiteio.c (gimp_pixpipe_params_parse): clamp
	the pixpipe dimension to the allowed range. Fixes bug #137902.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12788 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
+	* libgimpbase/gimpparasiteio.c (gimp_pixpipe_params_parse): clamp
+	the pixpipe dimension to the allowed range. Fixes bug #137902.
+
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
 	* app/text/gimptextlayer.c (gimp_text_layer_duplicate): put some
 	code back in that I removed accidentally.
 	(gimp_text_layer_render) freeze/thaw notifications to avoid that
