--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell.c (gimp_display_shell_reconnect):
+	call gimp_display_shell_expose_full() so the whole canvas gets
+	cleared when reverting the image.
+
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/gimpparasiteio.c (gimp_pixpipe_params_parse): clamp
