2004-03-22  Sven Neumann  <sven@gimp.org>
	* tools/gimp-remote.c: use putenv(); setenv() isn't available
	everywhere (bug #137930).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12791 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-remote.c: use putenv(); setenv() isn't available
+	everywhere (bug #137930).
+
 2004-03-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_reconnect):
