--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.[ch]: preserve the text tool on image
+	changes. Instead connect to the text layer's "notify::modified"
+	signal and disconnect from the layer when it is modified.
+	Fixes bug #137890.
+
 2004-03-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/file/file-open.c (file_open_with_proc_and_display): removed
