2004-03-22 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12794 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-22  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation by
+		  Ryoichi INAGAKI <inagaki@ryo1.net>.
+
 2004-03-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
 
 	* no.po: Updated Norwegian (Bokmål) translation.
