--- a/tips/ja.po
+++ b/tips/ja.po
@@ -2,7 +2,8 @@
 # Copyright (C) 1999,2002,2003 Free Software Foundation, Inc.
 # SHIRASAKI Yasuhiro <yasuhiro@gnome.gr.jp>, 1999
 # Takashi Kido <yositaka@yd5.so-net.ne.jp>, 2002
-# KAMAGASAKO Masatoshi <emerald@gnome.gr.jp, 2003
+# KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>, 2003
+# Ryoichi INAGAKI <ryo1@bc.wakwak.com>, 2004
 #
 # Replaced: & -> ＆
 #
@@ -10,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 22:57+0100\n"
-"PO-Revision-Date: 2003-04-04 18:21+0900\n"
-"Last-Translator: KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>\n"
+"POT-Creation-Date: 2004-03-04 13:37+0100\n"
+"PO-Revision-Date: 2004-03-22 12:50+0900\n"
+"Last-Translator: Ryoichi INAGAKI <ryo1@bc.wakwak.com>\n"
 "Language-Team: Japanese <translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +29,7 @@ msgid ""
 "viewing the mask directly."
 msgstr ""
 "レイヤーダイアログのレイヤーマスクの縮小表示を <tt>Alt</tt> を押しながらク"
-"リックするとレイヤーマスクを直接見るモードに切替えられるんだ。"
+"リックするとレイヤーマスクを直接見るモードに切替えられるんだ．"
 
 #: tips/gimp-tips.xml.in.h:3
 msgid ""
@@ -36,25 +37,23 @@ msgid ""
 "the effect of the layer mask."
 msgstr ""
 "レイヤーダイアログのレイヤーマスクの縮小表示を <tt>Ctrl</tt> を押しながらク"
-"リックするとレイヤーマスクの有効無効を切替えられるんだ。"
+"リックするとレイヤーマスクの有効無効を切替えられるんだ．"
 
 #: tips/gimp-tips.xml.in.h:4
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-click with the Bucket Fill tool to have it use the background "
 "color instead of the foreground color."
 msgstr ""
-"塗りつぶしツールでは <tt>Shift</tt> を押しながらクリックすると、背景色で塗り"
-"つぶすことができるよ。"
+"塗りつぶしツールでは <tt>Ctrl</tt> を押しながらクリックすると，背景色で塗り"
+"つぶすことができるよ．"
 
 #: tips/gimp-tips.xml.in.h:5
-#, fuzzy
 msgid ""
 "<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
 "degree angles."
 msgstr ""
-"変換ツールの回転モードでは <tt>Ctrl</tt> を押しながらドラッグすると、回転が15"
-"度単位になるんだ。"
+"変換ツールの回転モードでは <tt>Ctrl</tt> を押しながらドラッグすると，回転が"
+"15度単位になるんだ．"
 
 #: tips/gimp-tips.xml.in.h:6
 msgid ""
@@ -66,7 +65,6 @@ msgstr ""
 "ば全部のレイヤーが表示されるようになるよ。"
 
 #: tips/gimp-tips.xml.in.h:7
-#, fuzzy
 msgid ""
 "A Floating Selection must be anchored to a new layer or to the last active "
 "layer before doing other operations on the image. Click on the \"New Layer\" "
@@ -74,20 +72,21 @@ msgid ""
 "same."
 msgstr ""
 "フローティング選択は新規レイヤーか最後に操作したアクティブレイヤーに固定する"
-"必要があるんだ。\"レイヤー, チャンネル＆パス\" ダイアログで新規レイヤーかレイ"
-"ヤー固定ボタンをクリックするか、メニューを使うのさ。"
+"必要があるんだ．レイヤーダイアログで\"新規レイヤー\" か \"レイヤー固定ボタン\""
+"をクリックするか，メニューを使うのさ．"
 
 #: tips/gimp-tips.xml.in.h:8
-#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
 "menu item, and pressing the desired key combination. If \"Save Keyboard "
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
-"ショートカットキーの割当を変えるには、どんなáニューでもまずそのメニューを呼び"
-"出して、メニューにカーソルを当てた状態で、新しく割り当てるキーの組合せを押す"
-"だけで良いんだ。動的に行われるし、GIMP の終了時に自動的に保存されるよ。"
+"設定ダイアログで \"動的キーボードショートカット\" をオンにしておけば，ショート"
+"カットキーの割当を変えることができるよ．どんなメニューでもまずそのメニューを呼び"
+"出して，メニューにカーソルを当てた状態で，新しく割り当てるキーの組合せを押すだけ"
+"で良いんだ．\"ショートカットの保存\" をオンにしておけば，GIMP の終了時に自動的"
+"に保存されるよ．"
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -95,72 +94,69 @@ msgid ""
 "selections will snap to the guides. You can remove guides by dragging them "
 "off the image with the Move tool."
 msgstr ""
-"目盛枠の上からドラッグすると定規を画像上に引き出せるよ。選択領域なんかはこの"
-"定規に吸いつくようになってるんだ。この定規は移動ツールを使って画像上から追い"
-"出すこともできるようになってるよ。"
+"目盛枠の上からドラッグすると定規を画像上に引き出せるよ．選択領域なんかはこの"
+"定規に吸いつくようになってるんだ．この定規は移動ツールを使って画像上から追い"
+"出すこともできるようになってるよ．"
 
 #: tips/gimp-tips.xml.in.h:10
-#, fuzzy
 msgid ""
 "If some of your scanned photos do not look colorful enough, you can easily "
 "improve their tonal range with the \"Auto\" button in the Levels tool (Layer-"
 "&gt;Colors-&gt;Levels). If there are any color casts, you can correct them "
 "with the Curves tool (Layer-&gt;Colors-&gt;Curves)."
 msgstr ""
-"スキャンした画像の色が減っちゃうときには、レベルツール (画像->色->レベル)\n"
-" で「自動」ボタンを使ってトーンを簡単に改善することができるよ。カラーキャ\n"
-"ストがあれば、カーブツール (画像->色->カーブ) で修正することができるよ。"
+"スキャンした画像の色が減っちゃうときには，レベルツール (画像->色->レベル) で"
+"\"自動\"ボタンを使ってトーンを簡単に改善することができるよ。カラーキャストが"
+"あれば，カーブツール (レイヤー->色->カーブ) で修正することができるよ．"
 
 #: tips/gimp-tips.xml.in.h:11
-#, fuzzy
 msgid ""
 "If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
 "with their current settings. You can use the Paintbrush in gradient mode or "
 "even the Eraser or the Smudge tool."
 msgstr ""
 "パスをストローク描画 (編集-&gt;ストローク描画) するときは現在の描画ツールの設"
-"定を使うんだ。グラデーションモードの絵筆やパターンを使ったスタンプツールや消"
-"しゴムやにじみツールだって使うことができるんだ。"
+"定を使うんだ．グラデーションモードの絵筆やパターンを使ったスタンプツールや消"
+"しゴムやにじみツールだって使うことができるんだ．"
 
 #: tips/gimp-tips.xml.in.h:12
 msgid ""
 "If your screen is too cluttered, you can press <tt>Tab</tt> multiple times "
 "in an image window to hide or show the toolbox and other dialogs."
 msgstr ""
-"画面がきゅうくつな時は、画像ウィンドウで何回か <tt>Tab</tt> キーを押すことで"
-"道具箱やダイアログを出し入れすることができるんだ。"
+"画面がきゅうくつな時は，画像ウィンドウで何回か <tt>Tab</tt> キーを押すことで"
+"道具箱やダイアログを出し入れすることができるんだ．"
 
 #: tips/gimp-tips.xml.in.h:13
-#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
 "you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
-"大半のプラグインは今作業中の画像の有効なレイヤーだけに働くんだ。だから画像全"
-"体に効果を与えたいときには画像を統合 (レイヤー -&gt;画像の統合) する必要があ"
-"るんじゃないかな。"
+"大半のプラグインは今作業中の画像の有効なレイヤーだけに働くんだ．だから画像全"
+"体に効果を与えたいときには画像を統合 (画像-&gt;画像の統合) する必要があるん"
+"じゃないかな．"
 
 #: tips/gimp-tips.xml.in.h:14
 msgid ""
 "Nearly all image operations are performed by right-clicking on the image. "
 "And don't worry, you can undo most mistakes..."
 msgstr ""
-"画像上で右クリックすればどんな画像処理だってできるよ。ほとんどの失敗はやり直"
-"しがきくから、恐れなくても良いし..."
+"画像上で右クリックすればどんな画像処理だってできるよ．ほとんどの失敗はやり直"
+"しがきくから恐れなくても良いし..."
 
 #: tips/gimp-tips.xml.in.h:15
-#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
 "&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
 "Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
-"全部のプラグインが全ての種類の画像に使えるわけじゃないんだ。作業中の画像に対"
-"して使えないやつは、メニューが灰色になって選択できなくなってるはずだよ。そん"
-"な時には RGB 形式にしたり、アルファチャンネルを加えたり、画像を統合してみたり"
-"するといいかもしれないね。"
+"全部のプラグインが全ての種類の画像に使えるわけじゃないんだ．作業中の画像に対"
+"して使えないやつは，メニューが灰色になって選択できなくなってるはずだよ．そん"
+"な時には RGB 形式にしたり (画像-&gt;モード-&gt;RGB)，アルファチャンネルを"
+"加えたり (レイヤー-&gt;透明-&gt;アルファチャンネルの追加)，画像を統合して"
+"みたり (画像-&gt;画像の統合) するといいかもしれないね．"
 
 #: tips/gimp-tips.xml.in.h:16
 msgid ""
@@ -168,9 +164,9 @@ msgid ""
 "you to add to the current selection instead of replacing it. Using <tt>Ctrl</"
 "tt> before making a selection subtracts from the current one."
 msgstr ""
-"領域を選択し始める時に <tt>Shift</tt> キーを押したままにしておくと、その時の"
-"選択領域を置き換えるんじゃなくって、付け加える事が出来るんだ。<tt>Ctrl</tt>を"
-"押しながら始めれば領域をさっ引く事になるしね。"
+"領域を選択し始める時に <tt>Shift</tt> キーを押したままにしておくと，その時の"
+"選択領域を置き換えるんじゃなくって，付け加える事が出来るんだ．<tt>Ctrl</tt>を"
+"押しながら始めれば領域をさっ引く事になるしね．"
 
 #: tips/gimp-tips.xml.in.h:17
 msgid ""
@@ -178,9 +174,9 @@ msgid ""
 "<tt>.bz2</tt>, if you have bzip2 installed) to the filename and your image "
 "will be saved compressed. Of course loading compressed images works too."
 msgstr ""
-"GIMP は自動 gzip 圧縮をサポートしているよ。他だ単にファイル名に<tt>.gz</tt> "
-"を (bzip2 がある時には <tt>.bz2</tt> の方がいいかな) 付けるだけで、自動的に圧"
-"縮されるようになってるんだ。もちろん、読み込む時にも自動で展開されるよ。"
+"GIMP は自動 gzip 圧縮をサポートしているよ．他だ単にファイル名に<tt>.gz</tt> "
+"を (bzip2 がある時には <tt>.bz2</tt> の方がいいかな) 付けるだけで，自動的に圧"
+"縮されるようになってるんだ．もちろん，読み込む時にも自動で展開されるよ．"
 
 #: tips/gimp-tips.xml.in.h:18
 msgid ""
@@ -188,32 +184,29 @@ msgid ""
 "stack of slides or filters, such that looking through them you see a "
 "composite of their contents."
 msgstr ""
-"GIMP ではレイヤーを使って画像をまとめることができるんだ。まぁスライドとかフィ"
-"ルタを積み重ねたものをすかして見ているようなものだと思ってくれればいい。"
+"GIMP ではレイヤーを使って画像をまとめることができるんだ．まぁスライドとかフィ"
+"ルタを積み重ねたものをすかして見ているようなものだと思ってくれればいい．"
 
 #: tips/gimp-tips.xml.in.h:19
-#, fuzzy
 msgid ""
 "The file selection dialog box has command-line completion with <tt>Tab</tt>, "
 "just like the shell. Type part of a filename, hit <tt>Tab</tt>, and voila, "
 "it's completed."
 msgstr ""
-"ファイル選択ダイアログではいくつかの shell のように Tab キーを使っての補間が"
-"できるよ。ファイル名の一部分を打った後で、<tt>Tab</tt>キーを押せば‥‥ほらね、"
-"補間されるでしょ?"
+"ファイル選択ダイアログではいくつかの shell のように <tt>Tab</tt> キーを"
+"使っての補間ができるよ．ファイル名の一部分を打った後で，<tt>Tab</tt>キーを"
+"押せば‥‥ほらね，補間されるでしょ?"
 
 #: tips/gimp-tips.xml.in.h:20
-#, fuzzy
 msgid ""
 "The layer named \"Background\" is special because it lacks transparency. "
 "This prevents you from adding a layer mask or moving the layer up in the "
 "stack. You may add transparency to it by right-clicking in the Layers dialog "
 "and selecting \"Add Alpha Channel\"."
 msgstr ""
-"\"背景\" という名のレイヤーは特別だよ。透明にしたり、レイヤーマスクを\n"
-"付けたりすることができないんだ。本当に透明にする場合には \"レイヤー, \n"
-"チャンネル＆パス\" ダイアログ中で右クリックして、「アルファチャンネル\n"
-"を追加」を選択してやるといいよ。"
+"\"背景\" という名のレイヤーは特別だよ．透明にしたり，レイヤーマスクを付けたり，"
+"レイヤーを上に移動させることができないんだ．透明にしたい場合にはレイヤーダイア"
+"ログ中で右クリックして，「アルファチャンネルを追加」を選択してやるといいよ．"
 
 #: tips/gimp-tips.xml.in.h:21
 msgid ""
@@ -223,9 +216,9 @@ msgid ""
 "intersection of the guides, and the resulting selection will just touch the "
 "guides."
 msgstr ""
-"正円を作るには、楕円選択ツールを使ってる時に <tt>Shift</tt> を押すんだ。さら"
-"に正確に位置を決める時には定規を円の接線となる場所に水平、垂直に置いておこ"
-"う。で、最後に定規の交点にカーソルをもってこれば完璧さ。"
+"正円を作るには，楕円選択ツールを使ってる時に <tt>Shift</tt> を押すんだ．さら"
+"に正確に位置を決める時には定規を円の接線となる場所に水平，垂直に置いておこ"
+"う．で，最後に定規の交点にカーソルをもってこれば完璧さ．"
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
@@ -234,9 +227,9 @@ msgid ""
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
 "constrained to 15 degree angles."
 msgstr ""
-"描画ツール (絵筆、エアブラシ、鉛筆) を使っているときに <tt>Shift</tt> を押し"
-"ながらクリックするとカーソルのところまで直線が引かれるよ。さらに <tt>Ctrl</"
-"tt> を押してやれば、直線が15度単位になるんだ。"
+"描画ツール (絵筆，エアブラシ，鉛筆) を使っているときに <tt>Shift</tt> を押し"
+"ながらクリックするとカーソルのところまで直線が引かれるよ．さらに <tt>Ctrl</"
+"tt> を押してやれば，直線が15度単位になるんだ．。"
 
 #: tips/gimp-tips.xml.in.h:23
 msgid ""
@@ -245,9 +238,9 @@ msgid ""
 "the layers and every aspect of your work-in-progress. Once a project is "
 "completed, you can save it as JPEG, PNG, GIF, ..."
 msgstr ""
-"後でまた編集をする画像を保存する時には、GIMP 固有形式の XCF を使おう(拡張子"
-"は <tt>.xcf</tt>)。これは作業中の全ての状態を記録してくれるんだ。画像を完成さ"
-"せてから、JPEG, PNG, GIF として保存しようね..."
+"後でまた編集をする画像を保存する時には，GIMP 固有形式の XCF を使おう(拡張子"
+"は <tt>.xcf</tt>)．これは作業中の全ての状態を記録してくれるんだ．画像を完成さ"
+"せてから，JPEG, PNG, GIF として保存しようね..."
 
 #: tips/gimp-tips.xml.in.h:24
 msgid ""
@@ -255,34 +248,35 @@ msgid ""
 "makes the window move, your window manager uses the <tt>Alt</tt> key "
 "already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"<tt>Alt</tt> を押しながらドラッグすると選択領域を調節し直すことができるよ．"
+"もしウィンドウが動いてしまうのであれば，君の使っているウィンドウマネージャー"
+"すでに <tt>Alt</tt> を使ってるんだ．そういうときは <tt>Shift</tt> も押し"
+"ながら試してみてね．"
 
 #: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
 msgstr ""
-"ファジー選択ツールではクリックした後に、左右にドラッグする事で選択領域を広げ"
-"たり狭めたりできるんだ。"
+"ファジー選択ツールではクリックした後に，左右にドラッグする事で選択領域を広げ"
+"たり狭めたりできるんだ．"
 
 #: tips/gimp-tips.xml.in.h:26
-#, fuzzy
 msgid ""
 "You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
-"ベジエツールを使って複雑な選択領域を作れるよ。\"レイヤー, チャンネル＆パス\" "
-"ダイアログの \"パス\" タブでは複数のパスで作業したり選択領域に変換したりでき"
-"るんだ。"
+"ベジエツールを使って複雑な選択領域を作れるよ．パスダイアログでは複数のパスで"
+"作業したり選択領域に変換したりできるんだ．"
 
 #: tips/gimp-tips.xml.in.h:27
-#, fuzzy
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
-"\"レイヤー, チャンネル＆パス\" ダイアログから道具箱へレイヤーをドラッグして"
-"持っていくこともできるんだ。するとそのレイヤーで新しい画像を作るんだ。"
+"レイヤーダイアログから道具箱へレイヤーをドラッグして持っていくこともできるんだ．"
+"するとそのレイヤーで新しい画像を作るんだ．"
 
 #: tips/gimp-tips.xml.in.h:28
 msgid ""
@@ -290,20 +284,19 @@ msgid ""
 "from the toolbox or from a color palette and dropping it into an image will "
 "fill the current image or selection with that color."
 msgstr ""
-"GIMP の色々なものをドラッグ＆ドロップすることができるよ。例えば道具箱や色パ"
-"レットから色をドラッグして画像へドロップすると、その色で画像や選択領域が塗り"
-"つぶされるんだ。"
+"GIMP の色々なものをドラッグ＆ドロップすることができるよ．例えば道具箱や色パ"
+"レットから色をドラッグして画像へドロップすると，その色で画像や選択領域が塗り"
+"つぶされるんだ．"
 
 #: tips/gimp-tips.xml.in.h:29
-#, fuzzy
 msgid ""
 "You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
 "strokes the edge of your current selection. More complex shapes can be drawn "
 "using the Path tool or with Filters-&gt;Render-&gt;Gfig."
 msgstr ""
 "編集 -&gt; ストローク描画 を使って現在有効なブラシで選択領域の縁に沿って描く"
-"ことができるんだ。正方形や正円を書きたい時には便利だね。もっと複雑な図形を描"
-"きたい時には フィルタ -&gt; 描写 -&gt; Gfig だね。"
+"ことができるんだ．正方形や正円を書きたい時には便利だね．もっと複雑な図形を描"
+"きたい時にはパスツールや フィルタ -&gt; 描写 -&gt; Gfig だね．"
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -311,16 +304,15 @@ msgid ""
 "pressing the F1 key at any time. This also works inside the menus."
 msgstr ""
 "F1 キーを押すことでいつでも GIMP 機能の状況適応ヘルプを呼び出すことができるん"
-"だ。これはメニューの中でも使えるよ。"
+"だ．これはメニューの中でも使えるよ．"
 
 #: tips/gimp-tips.xml.in.h:31
-#, fuzzy
 msgid ""
 "You can perform many layer operations by right-clicking on the text label of "
 "a layer in the Layers dialog."
 msgstr ""
-"\"レイヤー, チャンネル＆パス\" ダイアログでの各レイヤーに関する操作はそれぞれ"
-"のレイヤー名の上で右クリックすると行えるんだ。"
+"各レイヤーに関する操作はレイヤーダイアログ内のそれぞれのレイヤー名の上で"
+"右クリックすると行えるんだ．"
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -328,22 +320,20 @@ msgid ""
 "are making a selection in order to constrain it to a perfect square or "
 "circle, or to have it centered on its starting point."
 msgstr ""
-"選択領域を作ってる最中に <tt>Shift</tt> や <tt>Ctrl</tt> を押すことで、選択領"
-"域を正方形や正円にしたり、領域を対角じゃなくって中心と角で指定することもでき"
-"たりするんだ。"
+"選択領域を作ってる最中に <tt>Shift</tt> や <tt>Ctrl</tt> を押すことで，"
+"選択領域を正方形や正円にしたり，領域を対角じゃなくって中心と角で指定することも"
+"できたりするんだ．"
 
 #: tips/gimp-tips.xml.in.h:33
-#, fuzzy
 msgid ""
 "You can save a selection to a channel (Select-&gt;Save to Channel) and then "
 "modify this channel with any paint tools. Using the buttons in the Channels "
 "dialog, you can toggle the visibility of this new channel or convert it to a "
 "selection."
 msgstr ""
-"選択領域をチャンネルに保存して (選択-&gt;チャンネルに保存)、描画ツールでこの"
-"チャンネルを修正することができるよ。\"レイヤー, チャンネル＆パス\"ダイアログ"
-"の \"チャンネル\" タブでボタンを使って、このチャンネルを表示したり選択領域に"
-"変換したりできるよ。"
+"選択領域をチャンネルに保存して (選択-&gt;チャンネルに保存)，描画ツールでこの"
+"チャンネルを修正することができるよ．チャンネルダイアログのボタンを使って，この"
+"チャンネルを表示したり選択領域に変換したりできるよ．"
 
 #: tips/gimp-tips.xml.in.h:34
 msgid ""
@@ -351,27 +341,26 @@ msgid ""
 "image (if your window manager doesn't trap those keys...)."
 msgstr ""
 "<tt>Alt</tt> を押しながら <tt>Tab</tt> を押すとレイヤーを順に切替えられるん"
-"だ。(窓マネージャがこの割当を横取りしてなければね‥‥)"
+"だ．(ウィンドウマネージャがこのキー割当を横取りしてなければね‥‥)"
 
 #: tips/gimp-tips.xml.in.h:35
 msgid ""
 "You can use the middle mouse button to pan around the image, if it's larger "
 "than its display window."
 msgstr ""
-"表示されている窓よりも画像の方が大きい場合には、マウスの中ボタンでずりずり表"
-"示領域を動かせるよ。"
+"表示されている窓よりも画像の方が大きい場合には，マウスの中ボタンでずりずり表"
+"示領域を動かせるよ．"
 
 #: tips/gimp-tips.xml.in.h:36
-#, fuzzy
 msgid ""
 "You can use the paint tools to change the selection. Click on the \"Quick "
 "Mask\" button at the bottom left of an image window. Change your selection "
 "by painting in the image and click on the button again to convert it back to "
 "a normal selection."
 msgstr ""
-"選択領域を変えるために描画ツールを使うことができるよ。画像ウィンドウの左下の"
-"クイックマスクボタンをクリックしよう。描画の変更が終わったらもう一度クリック"
-"してやることでいつもの選択領域に戻るんだ。"
+"選択領域を変えるために描画ツールを使うことができるよ．画像ウィンドウの左下の"
+"\"クイックマスク\"ボタンをクリックしよう．描画の変更が終わったらもう一度"
+"クリックしてやることでいつもの選択領域に戻るんだ．"
 
 #~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
