2004-03-22  Tor Lillqvist  <tml@iki.fi>
	* app/plug-in/plug-in.c (plug_in_recv_message): Win32-only
	workaround for bug #137968.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12796 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-22  Tor Lillqvist  <tml@iki.fi>
+
+	* app/plug-in/plug-in.c (plug_in_recv_message): Win32-only
+	workaround for bug #137968.
+
 2004-03-22  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimptexttool.c: keep the text editor open as long as
