2004-03-22  Sven Neumann  <sven@gimp.org>
	* app/core/gimplayer-floating-sel.c (floating_sel_attach): don't
	do a type-checking cast on an object that was released a few lines
	above. Fixes bug #137957.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12797 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-22  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimplayer-floating-sel.c (floating_sel_attach): don't
+	do a type-checking cast on an object that was released a few lines
+	above. Fixes bug #137957.
+
 2004-03-22  Tor Lillqvist  <tml@iki.fi>
 
 	* app/plug-in/plug-in.c (plug_in_recv_message): Win32-only
