--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Jarkko Ranta  <jjranta@cc.joensuu.fi>
+
+	* fi.po: Updated Finnish translation by Mikko Paananen.
+
 2004-03-22  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
