2004-03-23  Artur Flinta  <aflinta@cvs.gnome.org>
	* pl.po: Updated Polish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12799 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2004-03-22  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation by
