2004-03-23  Simon Budig  <simon@gimp.org>
	* plug-ins/script-fu/scripts/alien-glow-arrow.scm: fixed
	utility function rotate-points. Only worked sometimes by
	accident, probably because beveled-pattern-arrow.scm implemented
	a function of the same name correctly and all scripts share
	a common namespace.

	Fixes bug #136868.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12802 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-03-23  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/script-fu/scripts/alien-glow-arrow.scm: fixed
+	utility function rotate-points. Only worked sometimes by
+	accident, probably because beveled-pattern-arrow.scm implemented
+	a function of the same name correctly and all scripts share
+	a common namespace.
+
+	Fixes bug #136868.
+
 2004-03-23  Michael Natterer  <mitch@gimp.org>
 
 	The floating_sel code is really from the stone age:
