--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-23  Sven Neumann  <sven@gimp.org>
+
+	* INSTALL
+	* NEWS
+	* README: updated for the 2.0 release.
+
 2004-03-23  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/script-fu/scripts/alien-glow-arrow.scm: fixed
