--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2004-03-21  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation.
