--- a/po-libgimp/ja.po
+++ b/po-libgimp/ja.po
@@ -1,6 +1,6 @@
 # GIMP libgimp message translation table
-# Copyright (C) 2000,2003 Free Software Foundation, Inc.
-# SHIRASAKI Yasuhiro <yasuhiro@gnome.gr.jp>, 2000.
+# Copyright (C) 2000,2003,2004 Free Software Foundation, Inc.
+# SHIRASAKI Yasuhiro <yasuhiro@gnome.gr.jp>, 2000, 2004.
 # KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>, 2003.
 # Ryoichi INAGAKI <ryo1@bc.wakwak.com>, 2003.
 #
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: gimp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2003-09-10 21:52+0900\n"
-"Last-Translator: Ryoichi INAGAKI <ryo1@bc.wakwak.com>\n"
+"PO-Revision-Date: 2004-03-23 20:38+0900\n"
+"Last-Translator: SHIRASAKI Yasuhiro <yasuhiro@gnome.gr.jp>\n"
 "Language-Team: Japanese <translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +22,7 @@ msgstr "ブラシ選択"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "ブラウズ(_B)..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
 #, c-format
@@ -57,13 +57,13 @@ msgid "%s can't handle transparency"
 msgstr "%s は透明情報を取り扱えません"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "%s はレイヤーを取り扱えません"
+msgstr "%s はレイヤーマスクを取り扱えません"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "レイヤーマスク適用"
 
 #: libgimp/gimpexport.c:278
 #, c-format
@@ -97,17 +97,16 @@ msgstr ""
 "(良い結果を得たい場合には手動で行って下さい)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s は RGB もしくはインデックス画像のみ取り扱えます"
+msgstr "%s は二値ビットマップもしくはインデックス画像のみ取り扱えます"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"インデックス画像に標準設定で自動変換する\n"
+"インデックス画像にビットマップ標準設定で自動変換する\n"
 "(良い結果を得たい場合には手動で行って下さい)"
 
 #: libgimp/gimpexport.c:316
@@ -147,22 +146,20 @@ msgid "Export File"
 msgstr "ファイルのエクスポート"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "無視"
+msgstr "無視(_I)"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "エクスポート"
+msgstr "エクスポート(_E)"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
-msgstr "以下の理由のため画像のエクスポートを行う必要があります:"
+msgstr "以下の理由のため %s として保存する前に画像のエクスポートを行う必要があります:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -208,7 +205,7 @@ msgstr "パーセント"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(不正な UTF-8 文字列)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
@@ -241,24 +238,24 @@ msgid "%.1f MB"
 msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
-#, fuzzy, c-format
+#, c-format
 msgid "%d MB"
-msgstr "%d KB"
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
-#, fuzzy, c-format
+#, c-format
 msgid "%.2f GB"
-msgstr "%.2f MB"
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
-#, fuzzy, c-format
+#, c-format
 msgid "%.1f GB"
-msgstr "%.1f MB"
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%d GB"
-msgstr "%d KB"
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
@@ -268,11 +265,9 @@ msgstr "モジュールの読み込み: '%s'\n"
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"モジュール '%s' 読み込みエラー:\n"
-"%s"
+msgstr "モジュール '%s' 読み込みエラー: %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
@@ -298,27 +293,23 @@ msgstr "未読み込み"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "サムネイルフォルダ '%s' 作成失敗."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/前景色"
+msgstr "/前景色(_F)"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/背景色"
+msgstr "/背景色(_B)"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/黒"
+msgstr "/黒(_k)"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/白"
+msgstr "/白(_W)"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
@@ -391,11 +382,11 @@ msgstr "16 進数による色表記(_X)"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "現在:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "以前:"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -418,14 +409,12 @@ msgid "GigaBytes"
 msgstr "ギガバイト"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "三角形"
+msgstr "書きこみ可能"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "フォルダ選択"
+msgstr "フォルダ"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
@@ -525,14 +514,13 @@ msgstr ""
 
 #: libgimpwidgets/gimpwidgets.c:1295
 msgid "_New Seed"
-msgstr ""
+msgstr "新しい種(_N)"
 
 #: libgimpwidgets/gimpwidgets.c:1308
 msgid "Seed random number generator with a generated random number"
 msgstr "生成された乱数で、乱数生成の種を取得します"
 
 #: libgimpwidgets/gimpwidgets.c:1312
-#, fuzzy
 msgid "_Randomize"
 msgstr "乱数化(_R)"
 
@@ -545,9 +533,8 @@ msgid "Color Deficient Vision"
 msgstr "色覚障害の視覚"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "色覚障害のタイプ"
+msgstr "色覚障害のタイプ:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
@@ -570,9 +557,8 @@ msgid "Gamma"
 msgstr "ガンマ値"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "ガンマ値:"
+msgstr "ガンマ値(_G):"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -583,45 +569,44 @@ msgid "Contrast"
 msgstr "コントラスト"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "コントラストサイクル:"
+msgstr "コントラストサイクル(_y):"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "ICCカラープロファイルを用いる色合せ"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "色合せ"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "鮮かさ重視"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "相対カラーメトリック"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "絶対カラーメトリック"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "方法(_I):"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "ICCカラープロファイルを選択"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "プロファイル(_P):"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "黒の生成(_B)"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -686,58 +671,3 @@ msgstr "水彩色"
 #: modules/colorsel_water.c:251
 msgid "Pressure"
 msgstr "圧力"
-
-#~ msgid "Preview"
-#~ msgstr "プレビュー"
-
-#~ msgid ""
-#~ "No %s in gimprc:\n"
-#~ "You need to add an entry like\n"
-#~ "(%s \"%s\")\n"
-#~ "to your %s file."
-#~ msgstr ""
-#~ "%s が gimprc にありません:\n"
-#~ "(%s \"%s\")\n"
-#~ "のようなエントリをあなたの %s ファイルに\n"
-#~ "追加する必要があります."
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "パターン選択"
-
-#~ msgid "None (normal vision)"
-#~ msgstr "なし (一般的な色覚)"
-
-#~ msgid "_Time"
-#~ msgstr "時間(_T)"
-
-#~ msgid "pixel"
-#~ msgstr "ピクセル"
-
-#~ msgid "pixels"
-#~ msgstr "ピクセル"
-
-#~ msgid "inches"
-#~ msgstr "インチ"
-
-#~ msgid "millimeter"
-#~ msgstr "ミリメートル"
-
-#~ msgid "millimeters"
-#~ msgstr "ミリメートル"
-
-#~ msgid "point"
-#~ msgstr "ポイント"
-
-#~ msgid "points"
-#~ msgstr "ポイント"
-
-#~ msgid "picas"
-#~ msgstr "パイカ"
-
-#, fuzzy
-#~ msgid "Select Directory"
-#~ msgstr "ファイル選択"
-
-#~ msgid "OK"
-#~ msgstr "了解"
