2004-03-23  Sven Neumann  <sven@gimp.org>
	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12805 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/INSTALL
+++ b/INSTALL
@@ -22,7 +22,7 @@ need to uninstall the 1.2 version.
 
   3. We require PangoFT2, a Pango backend that uses FreeType2. Make sure 
      you have FreeType2 and fontconfig installed before you compile Pango.
-     FreetType2 can be downloaded from http://www.freetype.org/.
+     FreeType2 can be downloaded from http://www.freetype.org/.
      Fontconfig from http://x2.freedesktop.org/software/fontconfig.
 
   4. We use libart2. Grab the module libart_lgpl out of GNOME CVS or
