2004-03-23  Simon Budig  <simon@gimp.org>
	* plug-ins/script-fu/scripts/alien-glow-arrow.scm
	* plug-ins/script-fu/scripts/beveled-pattern-arrow.scm: Make
	helper functions local to the scripts. The better fix for
	bug #136868. Should also be done for a lot of other scripts,
	but is too likely to introduce new bugs to do this now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12807 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-23  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/script-fu/scripts/alien-glow-arrow.scm
+	* plug-ins/script-fu/scripts/beveled-pattern-arrow.scm: Make
+	helper functions local to the scripts. The better fix for
+	bug #136868. Should also be done for a lot of other scripts,
+	but is too likely to introduce new bugs to do this now.
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL
