Added a note about missing help files and where to get them.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12808 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/README
+++ b/README
@@ -14,6 +14,10 @@ release for GIMP 2.0. GAP, a set of plug-ins that used to live in the
 Video submenu has also become a separate package and can be downloaded
 from ftp://ftp.gimp.org/pub/gimp/plug-ins/v2.0/gap/.
 
+This release does also not contain any user documentation to be used
+by the built-in help system. Help files for GIMP 2.0 are being worked
+on and you can find snapshots at ftp://ftp.gimp.org/pub/gimp/help/.
+
 For detailed installation instructions, see the file INSTALL.
 
 
